# ticket-reader

./: .gitignore  CLAUDE.md  LICENSE  README.md  Tickets.csv  Tickets.xlsx  pyproject.toml  read_tickets.py  read_tickets_xlsx.py
Metar_Reader/: README.md  app.py  metar_decoder.py
Metar_Reader/templates/: index.html
tests/: conftest.py  test_csv_reader.py  test_xlsx_reader.py
tests/fixtures/: no_ticket_col.csv  sample.csv  sample_with_blanks.csv
ticket_reader/: __init__.py  cli.py  csv_reader.py  models.py  xlsx_reader.py
