[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-reader"
version = "0.1.0"
description = "Read and parse support tickets from CSV and XLSX files into typed Python objects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["tickets", "csv", "xlsx", "support", "helpdesk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ticket-reader = "ticket_reader.cli:main"

[project.urls]
Repository = "https://github.com/shireeshkumard/ticket-reader"
Issues = "https://github.com/shireeshkumard/ticket-reader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ticket_reader*"]

[tool.setuptools.package-data]
ticket_reader = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
